--- a/Home.html
+++ b/Home.html
@@ -102,6 +102,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <iframe src="https://discord.com/widget?id=917543966080110634&amp;theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
+        <img class="u-border-2 u-border-white u-image u-image-default u-image-1" src="images/example.png" alt="" data-image-width="1024" data-image-height="553">
       </div>
     </section>
     
